Adding version 0.8.0 blog

--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
         <main>
           <!-- Navbar-->
           <nav
-            class="
-              navbar navbar-marketing navbar-expand-lg
-              bg-transparent
-              navbar-light
-              fixed-top
-            "
+            class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-light fixed-top"
           >
             <div class="container px-5">
               <a class="navbar-brand text-primary" href="index.html"
@@ -125,25 +120,14 @@
                     </p>
                     <div class="d-flex flex-column flex-sm-row">
                       <a
-                        class="
-                          btn btn-md btn-primary
-                          fw-500
-                          me-sm-3
-                          mb-3 mb-sm-0
-                        "
+                        class="btn btn-md btn-primary fw-500 me-sm-3 mb-3 mb-sm-0"
                         href="https://docs.open-metadata.org"
                       >
                         Getting Started
                         <i class="ms-2" data-feather="arrow-right"></i>
                       </a>
                       <a
-                        class="
-                          btn btn-md btn-primary-soft
-                          text-primary
-                          fw-500
-                          me-sm-3
-                          mb-3 mb-sm-0
-                        "
+                        class="btn btn-md btn-primary-soft text-primary fw-500 me-sm-3 mb-3 mb-sm-0"
                         href="https://slack.open-metadata.org"
                         >Join our Slack</a
                       >
@@ -211,12 +195,7 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <div
-                          class="
-                            row
-                            gx-5
-                            align-items-center
-                            justify-content-center
-                          "
+                          class="row gx-5 align-items-center justify-content-center"
                         >
                           <div
                             class="col-md-9 col-lg-6 order-1 order-lg-0"
@@ -224,12 +203,7 @@
                           >
                             <div class="content-skewed content-skewed-right">
                               <img
-                                class="
-                                  content-skewed-item
-                                  img-fluid
-                                  shadow-lg
-                                  rounded-3
-                                "
+                                class="content-skewed-item img-fluid shadow-lg rounded-3"
                                 src="images/carousal-01.jpeg"
                               />
                             </div>
@@ -270,12 +244,7 @@
                       </div>
                       <div class="carousel-item">
                         <div
-                          class="
-                            row
-                            gx-5
-                            align-items-center
-                            justify-content-center
-                          "
+                          class="row gx-5 align-items-center justify-content-center"
                         >
                           <div
                             class="col-md-9 col-lg-6 order-1 order-lg-0"
@@ -283,12 +252,7 @@
                           >
                             <div class="content-skewed content-skewed-right">
                               <img
-                                class="
-                                  content-skewed-item
-                                  img-fluid
-                                  shadow-lg
-                                  rounded-3
-                                "
+                                class="content-skewed-item img-fluid shadow-lg rounded-3"
                                 src="images/carousal-02.jpeg"
                               />
                             </div>
@@ -516,6 +480,32 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-0-8-0-release-ca09bd2fbf54"
+                    target="_blank"
+                  >
+                    <img class="card-img-top" src="images/v0.8.0.jpg" />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        OpenMetadata 0.8.0 Release
+                      </h4>
+                      <p class="card-text">
+                        Event Notification via Webhooks, Slack Integration,
+                        Access Control Policy, and Manual Lineage.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <i data-feather="arrow-right"></i>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-0-7-0-release-9f741b8d5089"
                     target="_blank"
                   >
@@ -530,14 +520,7 @@
                       </p>
                     </div>
                     <div
-                      class="
-                        card-footer
-                        bg-transparent
-                        border-top
-                        d-flex
-                        align-items-center
-                        justify-content-between
-                      "
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
                     >
                       <div class="small text-primary">Read more</div>
                       <div class="small text-primary">
@@ -563,14 +546,7 @@
                       </p>
                     </div>
                     <div
-                      class="
-                        card-footer
-                        bg-transparent
-                        border-top
-                        d-flex
-                        align-items-center
-                        justify-content-between
-                      "
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
                     >
                       <div class="small text-primary">Read more</div>
                       <div class="small text-primary">
@@ -579,39 +555,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-6-0-release-metadata-versioning-events-api-one-click-ingestion-and-more-4394c4f08e0b"
-                    target="_blank"
-                  >
-                    <img class="card-img-top" src="images/v0.6.0.png" />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.6.0 Release
-                      </h4>
-                      <p class="card-text">
-                        Metadata Versioning, Events API, One-Click Ingestion,
-                        and more
-                      </p>
-                    </div>
-                    <div
-                      class="
-                        card-footer
-                        bg-transparent
-                        border-top
-                        d-flex
-                        align-items-center
-                        justify-content-between
-                      "
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <i data-feather="arrow-right"></i>
-                      </div>
-                    </div>
-                  </a>
-                </div>
+
                 <div class="text-center">
                   <a
                     class="btn btn-primary fw-500"
