Removed dummy texts

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
             <div class="container px-5 z-1">
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-8">
-                  <div class="display-5 mb-3 text-dark">Ready to start?</div>
-                  <h3>
-                    Bring up OpenMetadata in a few mins.<br />
-                    Run the following commands to get docker up and running.
-                  </h3>
+                  <div class="display-5 mb-3 text-dark">Ready to Start?</div>
+                  <h4>
+                    Run this command to get OpenMetadata up & running with
+                    Docker.
+                  </h4>
                   <div class="copy-code my-4 text-start">
                     <button type="button" class="btn btn-outline-light btn-sm">
                       <i class="me-2" data-feather="copy"></i> Copy
@@ -388,8 +388,9 @@
                   <div class="text-center mb-5">
                     <h2 class="section-header fw-600">Integrations</h2>
                     <p class="lead">
-                      Aenean feugiat egestas ex aliquam cursus. Aliquam ut augue
-                      sem. Nam a tincidunt massa, eu pretium odio.
+                      OpenMetadata's ingestion framework supports connectors for
+                      a wide range of services, and the list is constantly
+                      growing...
                     </p>
                   </div>
                 </div>
