Updated section images, Buttons

--- a/index.html
+++ b/index.html
@@ -100,23 +100,31 @@
               <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                   <div class="col-lg-6" data-aos="fade-up">
-                    <h1 class="page-header-ui-title fw-700">Open Metadata</h1>
+                    <h1 class="page-header-ui-title fw-700">OpenMetadata</h1>
                     <h3 class="page-header-ui-subtitle text-primary">
-                      A Single place to Discover, Collaborate and Get your data
-                      right.
+                      A Single Place to Discover, Collaborate and get your Data
+                      Right
                     </h3>
                     <p class="page-header-ui-text mb-5">
-                      It is a long established fact that a reader will be
-                      distracted by the readable content of a page when looking
-                      at its layout.
+                      Unlock the value of data assets with an end-to-end
+                      metadata management solution that includes data discovery,
+                      governance, data quality, observability, and people
+                      collaboration.
                     </p>
                     <div class="d-flex flex-column flex-sm-row">
                       <a
-                        class="btn btn-lg btn-primary btn-home-slack fw-500 mb-3 mb-sm-0"
+                        class="btn btn-lg btn-primary btn-home-slack fw-500 mb-3 mb-sm-0 me-sm-3"
                         href="https://demo.open-metadata.org/signin"
                       >
-                        <i class="fab fa-slack"></i>&ensp; Join Our Slack
+                        Explore Sandbox
                       </a>
+                      <a
+                        class="btn btn-lg btn-outline-primary btn-home-slack fw-500"
+                        href="https://communityinviter.com/apps/open-metadata/openmetadata"
+                      >
+                        <img src="images/icon-slack.svg" height="18" />&nbsp;
+                        Join our Slack</a
+                      >
                     </div>
                   </div>
                   <div
@@ -133,21 +141,17 @@
                 </div>
               </div>
             </div>
-            <div class="svg-border-rounded text-light">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 144.54 17.34"
-                preserveAspectRatio="none"
-                fill="currentColor"
-              >
-                <path
-                  d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"
-                ></path>
-              </svg>
-            </div>
+            <!-- <div class="svg-border-rounded text-light">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none"
+                            fill="currentColor">
+                            <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
+                        </svg>
+                    </div> -->
           </header>
 
-          <section class="bg-light pb-15 pt-10">
+          <section
+            class="bg-img-cover overlay overlay-light overlay-90 pb-15 pt-10 bg-ready"
+          >
             <div class="container px-5 z-1">
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-8">
@@ -224,10 +228,7 @@
                 </div>
                 <div class="col-lg-3">
                   <img src="images/icon-join.svg" class="mb-4" />
-                  <h3>
-                    Join and <br />
-                    Discuss
-                  </h3>
+                  <h3>Join Our Community</h3>
                   <p>
                     All of the layouts, page sections, components, and utilities
                     are fully covered in this products docs.
@@ -441,14 +442,14 @@
                     src="images/services/bigquery.png"
                     class="media-img mb-2"
                   />
-                  <h5>Big Query</h5>
+                  <h5>BigQuery</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img src="images/services/dbt.png" class="media-img mb-2" />
-                  <h5>DBT</h5>
+                  <h5>dbt</h5>
                 </div>
 
                 <div
@@ -476,7 +477,7 @@
                     src="images/services/elasticsearch.png"
                     class="media-img mb-2"
                   />
-                  <h5>Elastic Search</h5>
+                  <h5>Elasticsearch</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -500,7 +501,7 @@
                     src="images/services/ibmdb2.png"
                     class="media-img mb-2"
                   />
-                  <h5>IBM DB2</h5>
+                  <h5>IBM Db2</h5>
                 </div>
 
                 <div
@@ -528,7 +529,7 @@
                     src="images/services/mariadb.png"
                     class="media-img mb-2"
                   />
-                  <h5>Maria DB</h5>
+                  <h5>MariaDB</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -545,14 +546,14 @@
                   data-aos="fade-up"
                 >
                   <img src="images/services/mssql.png" class="media-img mb-2" />
-                  <h5>MS SQL</h5>
+                  <h5>MSSQL</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img src="images/services/mysql.png" class="media-img mb-2" />
-                  <h5>My SQL</h5>
+                  <h5>MySQL</h5>
                 </div>
 
                 <div
@@ -570,20 +571,20 @@
                   data-aos="fade-up"
                 >
                   <img
-                    src="images/services/perfect.png"
+                    src="images/services/postgres.png"
                     class="media-img mb-2"
                   />
-                  <h5>Perfect</h5>
+                  <h5>Postgres</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
-                    src="images/services/postgres.png"
+                    src="images/services/perfect.png"
                     class="media-img mb-2"
                   />
-                  <h5>Postgres</h5>
+                  <h5>Prefect</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -624,7 +625,7 @@
                     src="images/services/redshift.png"
                     class="media-img mb-2"
                   />
-                  <h5>Red Shift</h5>
+                  <h5>Redshift</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -634,7 +635,7 @@
                     src="images/services/salesforce.png"
                     class="media-img mb-2"
                   />
-                  <h5>Sales Force</h5>
+                  <h5>Salesforce</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -664,7 +665,7 @@
                     src="images/services/tableu.png"
                     class="media-img mb-2"
                   />
-                  <h5>Tableu</h5>
+                  <h5>Tableau</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -684,23 +685,56 @@
                   />
                   <h5>Vertica</h5>
                 </div>
+                <div
+                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <img
+                    src="images/services/mlflow.png"
+                    class="media-img mb-2"
+                  />
+                  <h5>MLflow</h5>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <img
+                    src="images/services/sqlalchemy.png"
+                    class="media-img mb-2"
+                  />
+                  <h5>SQLAlchemy</h5>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <img src="images/services/ldap.png" class="media-img mb-2" />
+                  <h5>LDAP</h5>
+                </div>
+                <div
+                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <img
+                    src="images/services/clickhouse.png"
+                    class="media-img mb-2"
+                  />
+                  <h5>ClickHouse</h5>
+                </div>
               </div>
             </div>
-            <div class="svg-border-rounded text-light">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 144.54 17.34"
-                preserveAspectRatio="none"
-                fill="currentColor"
-              >
-                <path
-                  d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"
-                ></path>
-              </svg>
-            </div>
+            <!-- <div class="svg-border-rounded text-light">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none"
+                            fill="currentColor">
+                            <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
+                        </svg>
+                    </div> -->
           </section>
 
-          <section class="bg-light pt-10 pb-5">
+          <section
+            class="bg-img-cover overlay overlay-light overlay-80 pt-10 pb-5 bg-cloud"
+          >
             <div class="container px-5 z-1">
               <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
@@ -728,18 +762,12 @@
                 </div>
               </div>
             </div>
-            <div class="svg-border-rounded text-white">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 144.54 17.34"
-                preserveAspectRatio="none"
-                fill="currentColor"
-              >
-                <path
-                  d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"
-                ></path>
-              </svg>
-            </div>
+            <!-- <div class="svg-border-rounded text-white">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none"
+                            fill="currentColor">
+                            <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
+                        </svg>
+                    </div> -->
           </section>
 
           <section class="bg-white pb-5 pt-10">
