Changing documentation text.

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
               <div class="row gx-5 text-center">
                 <div class="col-lg-3 mb-5 mb-lg-0">
                   <img src="images/icon-doc.svg" class="mb-4" />
-                  <h3>View Our Full Documentation</h3>
+                  <h3>Refer Documentation</h3>
                   <p>
-                    Our customizable, block-based build system makes creating
-                    your next project fast and easy!
+                    Benefit with the step-by-step guides to start implementing
+                    and get started.
                   </p>
                   <a class="btn btn-sm btn-primary fw-500" href="#!"
                     >Learn More</a
@@ -206,10 +206,10 @@
                 </div>
                 <div class="col-lg-3 mb-5 mb-lg-0">
                   <img src="images/icon-git.svg" class="mb-4" />
-                  <h3>See Our Progress on GitHub</h3>
+                  <h3>Let’s Build on GitHub</h3>
                   <p>
-                    Featuring carefully crafted, mobile-first components, your
-                    end product will function beautifully on any device!
+                    Contribute code, try out good starting issues, and join the
+                    momentum.
                   </p>
                   <a class="btn btn-sm btn-primary fw-500" href="#!"
                     >Learn More</a
@@ -217,10 +217,10 @@
                 </div>
                 <div class="col-lg-3 mb-5 mb-lg-0">
                   <img src="images/icon-slack.svg" class="mb-4" />
-                  <h3>Find Help <br />on Slack</h3>
+                  <h3>Connect on Slack</h3>
                   <p>
-                    Featuring carefully crafted, mobile-first components, your
-                    end product will function beautifully on any device!
+                    Ask questions, get help, discuss feature requests, and
+                    connect with contributors and users.
                   </p>
                   <a class="btn btn-sm btn-primary fw-500" href="#!"
                     >Learn More</a
@@ -230,8 +230,8 @@
                   <img src="images/icon-join.svg" class="mb-4" />
                   <h3>Join Our Community</h3>
                   <p>
-                    All of the layouts, page sections, components, and utilities
-                    are fully covered in this products docs.
+                    Attend meetings, share your thoughts, and know where we are
+                    heading.
                   </p>
                   <a class="btn btn-sm btn-primary fw-500" href="#!"
                     >Learn More</a
